Fix Facebook share z-index on photo galleries

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -3539,3 +3539,6 @@ body.node-type-petition-action .node-petition-action #edit-terms-of-use-note {
     }
 }
 
+.node-type-openpublish-photo-gallery .fb_iframe_widget_lift {
+    z-index: 5000;
+}
